feat: add dataset loading

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ firebase-cred.json
 .env
 google-cred.json
 notes.md
+notes.md
+server/__pycache__/**
+server/database.db
+
+/images
+Data_Entry_2017_v2020.csv
