--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ flask-cors
 python-dotenv
 requests
 tensorflow
-
+firebase-admin
+google-api-python-client 
+google-auth-httplib2 
+google-auth-oauthlib
