--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,33 @@
 services:
   client:
     build:
-      context: ./
-      dockerfile: client/Dockerfile
+      context: ./client
+      dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "${CLIENT_PORT:-5000}:${CLIENT_PORT:-5000}"
     depends_on:
       server:
         condition: service_started
     volumes:
-      - ./client/src:/streamlit-app/src
+      - ./client:/app
+    env_file:
+      - .env
     environment:
-      - PORT=5000
-      - ENV FLASK_ENV=development
-      - ENV FLASK_APP=app.py
+      - STREAMLIT_SERVER_PORT=${CLIENT_PORT:-5000}
+      - SERVER_URL=http://server:4000
 
   server:
     build:
-      context: ./
-      dockerfile: server/Dockerfile
+      context: ./server
+      dockerfile: Dockerfile
     ports:
-      - "4000:4000"
+      - "${SERVER_PORT:-4000}:${SERVER_PORT:-4000}"
     volumes:
-      - ./server:/server-app
+      - ./server:/app
     env_file:
       - .env
-    # environment:
-
+    environment:
+      - FLASK_RUN_PORT=${SERVER_PORT:-4000}
+      - FLASK_ENV=${FLASK_ENV}
+      - FLASK_APP=${FLASK_APP:-server.py}
+      - FIREBASE_BUCKET=${FIREBASE_BUCKET}
