--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,4 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["streamlit", "run", "streamlit_app.py", "--server.port=5173", "--server.address=0.0.0.0"]
+EXPOSE 8501
+
+CMD ["streamlit", "run", "streamlit_app.py", "--server.address=0.0.0.0"]
