--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,30 +4,29 @@ services:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - "${CLIENT_PORT:-5000}:${CLIENT_PORT:-5000}"
+      - "${CLIENT_PORT:-8501}:8501"
     depends_on:
-      server:
-        condition: service_started
+      - server
     volumes:
       - ./client:/app
     env_file:
       - .env
     environment:
-      - STREAMLIT_SERVER_PORT=${CLIENT_PORT:-5000}
-      - SERVER_URL=http://server:4000
+      - STREAMLIT_SERVER_PORT=8501
+      - SERVER_URL=${SERVER_URL}
 
   server:
     build:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - "${SERVER_PORT:-4000}:${SERVER_PORT:-4000}"
+      - "${SERVER_PORT:-4000}:4000"
     volumes:
       - ./server:/app
     env_file:
       - .env
     environment:
-      - FLASK_RUN_PORT=${SERVER_PORT:-4000}
+      - FLASK_RUN_PORT=4000
       - FLASK_ENV=${FLASK_ENV}
       - FLASK_APP=${FLASK_APP:-server.py}
       - FIREBASE_BUCKET=${FIREBASE_BUCKET}
