--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["flask", "run", "--host=0.0.0.0", "--port=4000"]
+CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:$SERVER_PORT server:app"]
